<resources>
    <string name="home">Home</string>
    <string name="meal_planner">Meal Planner</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="healthy_food_decider">Healthy Food Decider</string>
    <string name="make_healthier_food_choices_effortlessly">Make Healthier Food Choices, Effortlessly.</string>
    <string name="your_personal_nutrition_assistant_that_helps_you_plan_track_and_improve_your_eating_habits">Your personal nutrition assistant that helps you plan, track, and improve your eating habits.</string>
    <string name="start_planning_your_meals">Start Planning Your Meals</string>
    <string name="app_name" />
    <string name="log_in_screen" />
    <string name="daily_plan" />
    <string name="log_in" />
    <string name="preference_screen" />
    <string name="recipes_screen" />
    <string name="recommendations_screen" />
    <string name="summary_screen" />
    <string name="search_meals">Search meals…</string>
    <string name="monday">Monday</string>
    <string name="breakfast_ngreek_yogurt_bowl_n320_cal">Breakfast\nGreek Yogurt Bowl\n320 cal</string>
    <string name="lunch_nquinoa_salad_n450_cal">Lunch\nQuinoa Salad\n450 cal</string>
    <string name="dinner_ngrilled_salmon_n580_cal">Dinner\nGrilled Salmon\n580 cal</string>
    <string name="generate_new_plan">Generate New Plan</string>
    <string name="week_of_may_15_2023">Week of May 15, 2023</string>
    <string name="Tuesday">tuesday</string>
    <string name="share_via_twitter">Share via Twitter</string>
    <string name="share_via_facebook">Share via Facebook</string>
    <string name="share_via_email">Share via Email</string>
    <string name="tuesday">Tuesday</string>
    <string name="may_2023">May, 2023</string>
    <string name="week_2">Week 2</string>
    <string name="previous_week">←</string>
    <string name="next_week">→</string>
    <string name="ingredients">Ingredients:</string>

    <string name="meal_history_title">Meal History</string>
    <string name="total_meals">Total Meals</string>
    <string name="placeholder">placeholder</string>
    <string name="avg_daily_calories">Avg. Daily Calories</string>
    <string name="most_common_meal">Most Common Meal</string>
    <string name="streak">Streak</string>
    <string name="filters">Filters</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="recommendations">Recommendations</string>
    <string name="comp3074_group_project_group_18">COMP3074 Group Project - Group 18</string>
    <string name="meet_the_team">Meet The Team</string>
    <string name="anna_shibanova">Anna Shibanova</string>
    <string name="student_number_101399925">Student Number: 101399925</string>
    <string name="oleg_chystieiev">Oleg Chystieiev</string>
    <string name="student_number_101447469">Student Number: 101447469</string>
    <string name="nicole_milmine">Nicole Milmine</string>
    <string name="student_number_101462077">Student Number: 101462077</string>
    <string name="mo_harry_bandukda">Mo Harry Bandukda</string>
    <string name="student_number_101451857">Student Number: 101451857</string>
    <string name="return_to_home">Return to Home</string>
    <string name="flavorly">Flavorly</string>
    <string name="meal_plan_app">Meal Plan App</string>
    <string name="member_since">Member since</string>
    <string name="avatar">avatar</string>
    <string name="height">Height</string>
    <string name="in">in</string>
    <string name="ft">ft</string>
    <string name="weight">Weight</string>
    <string name="lb">lb</string>
    <string name="activity_level">Activity Level</string>
    <string name="save">Save</string>
    <string name="dietary_preferences">Dietary Preferences</string>
    <string name="edit">Edit</string>
    <string name="allergies_amp_restrictions"><![CDATA[Allergies & Restrictions]]></string>
    <string name="edit_profile">Edit Profile</string>

    <string name="api_key">0df6da35c1e94bb38eb9f5e97a97d2ae</string>
    <string name="recipes">Recipes</string>
    <string name="food_recipes_app">Food Recipes App</string>
    <string name="discover_recipes">Discover Recipes</string>
    <string name="menu">Menu</string>
    <string name="explore_recipes">Explore Recipes</string>
    <string-array name="meal_types">
        <item>All Meal Types</item>
        <item>Takeout</item>
        <item>Vegetarian</item>
    </string-array>

    <string-array name="calorie_range">
        <item>Full Range</item>
        <item>less than 1600 </item>
        <item>1600 to 2000</item>
        <item>2000 to 3000</item>
        <item>greater than 3000</item>
    </string-array>

    <string-array name="activity_level_arr">
        <item>High</item>
        <item>Moderate</item>
        <item>Low</item>
    </string-array>

    <string-array name="diet_pref_string">
        <item>Vegetarian</item>
        <item>Vegan</item>
        <item>Pescatarian</item>
        <item>Kosher</item>
        <item>Halal</item>
        <item>Gluten-Free</item>
        <item>Low-Carb</item>
        <item>Keto</item>
        <item>Paleo</item>
        <item>Raw Food</item>
    </string-array>

    <!-- String array for common food allergies -->
    <string-array name="allergies_string">
        <item>Peanuts</item>
        <item>Tree Nuts</item>
        <item>Dairy</item>
        <item>Eggs</item>
        <item>Wheat</item>
        <item>Soy</item>
        <item>Fish</item>
        <item>Shellfish</item>
        <item>Sesame</item>
        <item>Gluten</item>
    </string-array>

    <string-array name="tags">
        <item>main course</item>
        <item>soup</item>
        <item>appetizer</item>
        <item>salad</item>
        <item>bread</item>
        <item>sauce</item>
        <item>beverage</item>
        <item>dessert</item>
    </string-array>


</resources>