<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meals_total"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_acc"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MealHistoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/navHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="navigateToHome"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/navMealPlanner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="navigateToMealPlanner"
            android:text="@string/meal_planner"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/navProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="navigateToProfile"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/navHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="navigateToHistory"
            android:text="@string/history"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:baselineAligned="false"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/meal_history_title"
                android:textSize="32sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/mealHistoryList"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>