<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green"
    tools:context=".TeamActivity">

    <include layout="@layout/nav_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/projectTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meet_the_team"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/groupNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comp3074_group_project_group_18"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"/>

            <!-- Team Member List -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="12dp"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/anna_shibanova"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/green"
                            android:layout_marginBottom="4dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/student_number_101399925"
                            android:textSize="14sp"
                            android:textColor="@color/green"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="12dp"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nicole_milmine"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/green"
                            android:layout_marginBottom="4dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/student_number_101462077"
                            android:textSize="14sp"
                            android:textColor="@color/green"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="12dp"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/oleg_chystieiev"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/green"
                            android:layout_marginBottom="4dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/student_number_101447469"
                            android:textSize="14sp"
                            android:textColor="@color/green"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="12dp"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mo_harry_bandukda"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/green"
                            android:layout_marginBottom="4dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/student_number_101451857"
                            android:textSize="14sp"
                            android:textColor="@color/green"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <Button
                android:id="@+id/btnReturnHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/white"
                android:padding="12dp"
                android:onClick="navigateToHome"
                android:text="@string/return_to_home"
                android:textColor="@color/green"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>