<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_acc"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".EditProfileActivity">

    <include
        layout="@layout/nav_bar" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5sp"
        android:elevation="2dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center">

            <!-- Profile Pic -->
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:cardCornerRadius="50dp"
                app:cardElevation="2dp">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/avatar"
                    android:scaleType="fitXY"
                    android:src="@drawable/avatar"/>

            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@string/placeholder"
                android:layout_marginTop="12sp"
                android:padding="20dp"
                android:textStyle="bold"
                android:elevation="2dp"
                android:textSize="18sp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/year_joined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>

            <!-- Separator -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="20dp"
                android:background="@color/grey"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:text="@string/height"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/height_in"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:importantForAutofill="no"
                    android:hint="@string/in"
                    android:inputType="number"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/height_ft"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/height_ft"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:hint="@string/ft"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:text="@string/weight"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/profile_weight"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:inputType="number"
                    android:importantForAutofill="no"
                    android:text="@string/placeholder"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/textView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:text="@string/lb"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:gravity="center_vertical"
                    android:text="@string/activity_level"
                    tools:ignore="RelativeOverlap" />
                <Spinner
                    android:id="@+id/profile_activity_level"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:entries="@array/activity_level_arr"
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <!-- Separator -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="20dp"
                android:background="@color/grey"/>

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:maxWidth="200dp"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:backgroundTint="@color/green"
                android:text="@string/save"
                android:onClick="toSave"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>